'Mejoras de documentación'

--- a/Go/Documentación/2.Operadores.md
+++ b/Go/Documentación/2.Operadores.md
@@ -1,6 +1,6 @@
-# Operadores en Go
+# 2. Operadores en Go
 
-## - Operadores Aritméticos
+## 2.1. Operadores Aritméticos
 
 - Suma: + (Ejemplo: a + b)
 - Resta: - (Ejemplo: a - b)
@@ -8,7 +8,7 @@
 - División: / (Ejemplo: a / b)
 - Módulo: % (Ejemplo: a % b)
 
-## - Operadores de Comparación
+## 2.2. Operadores de Comparación
 
 - Igual a: == (Ejemplo: a == b)
 - Diferente a: != (Ejemplo: a != b)
@@ -17,13 +17,13 @@
 - Mayor o igual que: >= (Ejemplo: a >= b)
 - Menor o igual que: <= (Ejemplo: a <= b)
 
-## - Operadores Lógicos
+## 2.3. Operadores Lógicos
 
 - AND lógico: && (Ejemplo: c && d)
 - OR lógico: || (Ejemplo: c || d)
 - NOT lógico: ! (Ejemplo: !c)
 
-## - Operadores Bit a Bit
+## 2.4. Operadores Bit a Bit
 
 - AND bit a bit: & (Ejemplo: a & b)
 - OR bit a bit: | (Ejemplo: a | b)
@@ -32,7 +32,7 @@
 - Desplazamiento a la izquierda: << (Ejemplo: a << 1)
 - Desplazamiento a la derecha: >> (Ejemplo: a >> 1)
 
-## - Operadores de Asignación
+## 2.5. Operadores de Asignación
 
 - Asignación simple: = (Ejemplo: a = 5)
 - Asignación compuesta: +=, -=, \*=, /=, %= (Ejemplo: a += 5)
