--- a/Go/Documentación/3.EstructurasControl.md
+++ b/Go/Documentación/3.EstructurasControl.md
@@ -1,158 +1,154 @@
-# Estructuras de control
+# 3. Estructuras de control
 
-## 1. Condicionales
+## 3.1. Condicionales
 
-**1.1 if: Evalúa una condición y ejecuta el bloque de código si la condición es verdadera.**
+- **if: Evalúa una condición y ejecuta el bloque de código si la condición es verdadera.**
 
-```go
-if x > 10 {
-    fmt.Println("x es mayor que 10")
-}
+  ```go
+  if x > 10 {
+      fmt.Println("x es mayor que 10")
+  }
 
-```
+  ```
 
-**1.2 else if: Se usa junto con if para verificar múltiples condiciones.**
+- **else if: Se usa junto con if para verificar múltiples condiciones.**
 
-```go
-if x > 10 {
-    fmt.Println("x es mayor que 10")
-} else if x == 10 {
-    fmt.Println("x es igual a 10")
-}
+  ```go
+  if x > 10 {
+      fmt.Println("x es mayor que 10")
+  } else if x == 10 {
+      fmt.Println("x es igual a 10")
+  }
 
-```
+  ```
 
-**1.3 else: Se ejecuta si ninguna de las condiciones anteriores es verdadera.**
+- **else: Se ejecuta si ninguna de las condiciones anteriores es verdadera.**
 
-```go
-if x > 10 {
-    fmt.Println("x es mayor que 10")
-} else {
-    fmt.Println("x es 10 o menor")
-}
+  ```go
+  if x > 10 {
+      fmt.Println("x es mayor que 10")
+  } else {
+      fmt.Println("x es 10 o menor")
+  }
 
-```
+  ```
 
-**1.4 Switch: Selecciona entre múltiples opciones y ejecuta el bloque de código que coincide con el caso.**
+- **Switch: Selecciona entre múltiples opciones y ejecuta el bloque de código que coincide con el caso.**
 
-```go
-switch day {
-case "Monday":
-    fmt.Println("Inicio de la semana")
-case "Friday":
-    fmt.Println("Fin de la semana laboral")
-default:
-    fmt.Println("Día normal")
-}
-
-```
+  ```go
+  switch day {
+  case "Monday":
+      fmt.Println("Inicio de la semana")
+  case "Friday":
+      fmt.Println("Fin de la semana laboral")
+  default:
+      fmt.Println("Día normal")
+  }
+  ```
 
 ---
 
-## 2. Bucles
+## 3.3. Bucles
 
-### For
+- **2.1 for: El único bucle en Go. Puede actuar como un bucle for, while o do-while.**
 
-**2.1 for: El único bucle en Go. Puede actuar como un bucle for, while o do-while.**
+  - Bucle tradicional:
 
-- Bucle tradicional:
+  ```go
+  for i := 0; i < 5; i++ {
+      fmt.Println(i)
+  }
 
-```go
-for i := 0; i < 5; i++ {
-    fmt.Println(i)
-}
+  ```
 
-```
+  - Bucle con condición (como while):
 
-- Bucle con condición (como while):
+  ```go
+  i := 0
+  for i < 5 {
+      fmt.Println(i)
+      i++
+  }
 
-```go
-i := 0
-for i < 5 {
-    fmt.Println(i)
-    i++
-}
+  ```
 
-```
+  - Bucle infinito (como do-while)
 
-- Bucle infinito (como do-while)
+  ```go
+  for {
+      fmt.Println("Bucle infinito")
+      break // Salida del bucle
+  }
 
-```go
-for {
-    fmt.Println("Bucle infinito")
-    break // Salida del bucle
-}
+  ```
 
-```
+- **2.1 for range: Itera sobre elementos en una colección (arrays, slices, maps, strings) y devuelve el índice y el valor del elemento.**
 
-**2.1 for range: Itera sobre elementos en una colección (arrays, slices, maps, strings) y devuelve el índice y el valor del elemento.**
+  ```go
+  // Iterar sobre un slice
+  nums := []int{1, 2, 3}
+  for index, value := range nums {
+      fmt.Println(index, value)
+  }
 
-```go
-// Iterar sobre un slice
-nums := []int{1, 2, 3}
-for index, value := range nums {
-    fmt.Println(index, value)
-}
+  // Iterar sobre un map
+  m := map[string]int{"a": 1, "b": 2}
+  for key, value := range m {
+      fmt.Println(key, value)
+  }
 
-// Iterar sobre un map
-m := map[string]int{"a": 1, "b": 2}
-for key, value := range m {
-    fmt.Println(key, value)
-}
+  // Iterar sobre una string
+  s := "hello"
+  for index, char := range s {
+      fmt.Println(index, string(char))
+  }
+  ```
 
-// Iterar sobre una string
-s := "hello"
-for index, char := range s {
-    fmt.Println(index, string(char))
-}
-```
+## 3.4. Control de Flujo
 
-## 3. Control de Flujo
+- **break: Sale de un bucle o switch.**
 
-**3.1 break: Sale de un bucle o switch.**
+  ```go
+  for i := 0; i < 10; i++ {
+      if i == 5 {
+          break
+      }
+      fmt.Println(i)
+  }
 
-```go
-for i := 0; i < 10; i++ {
-    if i == 5 {
-        break
-    }
-    fmt.Println(i)
-}
+  ```
 
-```
+- **continue: Omite el resto del código en el bucle actual y pasa a la siguiente iteración.**
 
-**continue: Omite el resto del código en el bucle actual y pasa a la siguiente iteración.**
+  ```go
+  for i := 0; i < 10; i++ {
+      if i%2 == 0 {
+          continue
+      }
+      fmt.Println(i)
+  }
+  ```
 
-```go
-for i := 0; i < 10; i++ {
-    if i%2 == 0 {
-        continue
-    }
-    fmt.Println(i)
-}
+- **return: Sale de una función y opcionalmente devuelve un valor.**
 
-```
+  ```go
+  func add(a int, b int) int {
+      return a + b
+  }
 
-**return: Sale de una función y opcionalmente devuelve un valor.**
+  ```
 
-```go
-func add(a int, b int) int {
-    return a + b
-}
+- **goto: Salta a una etiqueta dentro del mismo bloque de código. Su uso está generalmente desaconsejado debido a que puede hacer que el código sea más difícil de seguir.**
 
-```
+  ```go
+  func main() {
+      i := 0
+      here:
+          if i < 5 {
+              fmt.Println(i)
+              i++
+              goto here
+          }
+  }
 
-**goto: Salta a una etiqueta dentro del mismo bloque de código. Su uso está generalmente desaconsejado debido a que puede hacer que el código sea más difícil de seguir.**
-
-```go
-func main() {
-    i := 0
-    here:
-        if i < 5 {
-            fmt.Println(i)
-            i++
-            goto here
-        }
-}
-
-```
+  ```
