--- a/Go/Documentación/1.Sintaxis&Variables.md
+++ b/Go/Documentación/1.Sintaxis&Variables.md
@@ -1,177 +1,177 @@
-# Sintaxis y Variables en Go
+# 1. Sintaxis y Variables en Go
 
-## 1. Sintaxis Básica
+## 1.1 Sintaxis Básica
 
 Go es un lenguaje fuertemente tipado, diseñado para ser eficiente y fácil de leer. La estructura básica de un programa en Go incluye paquetes, funciones, y declaraciones.
 
-**1.1. Estructura del Lenguaje:**
+- **Estructura del Lenguaje:**
 
-- Paquetes: Todo programa en Go comienza con la declaración de un paquete.
+  - Paquetes: Todo programa en Go comienza con la declaración de un paquete.
 
-  ```go
-  package main
+    ```go
+    package main
 
-  ```
+    ```
 
-- Importaciones: Para incluir bibliotecas estándar o de terceros.
+  - Importaciones: Para incluir bibliotecas estándar o de terceros.
 
-  ```go
-  import "fmt"
+    ```go
+    import "fmt"
 
-  ```
+    ```
 
-- Funciones: La función principal es main(), que es el punto de entrada del programa.
+  - Funciones: La función principal es main(), que es el punto de entrada del programa.
 
-  ```go
-  func main() {
-  fmt.Println("Hola, Go!")
-  }
-  ```
+    ```go
+    func main() {
+    fmt.Println("Hola, Go!")
+    }
+    ```
 
-**1.2. Palabras Clave:**
+- **Palabras Clave:**
 
-Algunas de las palabras clave importantes en Go son:
+  Algunas de las palabras clave importantes en Go son:
 
-- var, const: Para declarar variables y constantes.
-- func: Para definir funciones.
-- if, else, for, switch: Estructuras de control.
-- go, defer, return: Para control de concurrencia y manejo de funciones.
+  - var, const: Para declarar variables y constantes.
+  - func: Para definir funciones.
+  - if, else, for, switch: Estructuras de control.
+  - go, defer, return: Para control de concurrencia y manejo de funciones.
 
-**1.3. Operadores:**
+- **Operadores:**
 
-Go incluye operadores aritméticos, lógicos, de comparación y bit a bit, que se usan de manera intuitiva:
+  Go incluye operadores aritméticos, lógicos, de comparación y bit a bit, que se usan de manera intuitiva:
 
-- Aritméticos: +, -, \*, /, %
-- Comparación: ==, !=, <, >, <=, >=
-- Lógicos: &&, ||, !
-- Bit a bit: &, |, ^, &^, <<, >>
+  - Aritméticos: +, -, \*, /, %
+  - Comparación: ==, !=, <, >, <=, >=
+  - Lógicos: &&, ||, !
+  - Bit a bit: &, |, ^, &^, <<, >>
 
-**1.4. Terminadores:**
+- **Terminadores:**
 
-En Go, cada sentencia termina con una nueva línea o un punto y coma implícito, pero el uso de punto y coma explícito es raro.
+  En Go, cada sentencia termina con una nueva línea o un punto y coma implícito, pero el uso de punto y coma explícito es raro.
 
 ---
 
-## 2. Declaración de Variables
+## 1.2 Declaración de Variables
 
 En Go, las variables pueden declararse de forma explícita con la palabra clave var o de manera implícita con el operador :=, que permite la inferencia de tipo.
 
-**2.1. Tipos de Variables:**
+- **Tipos de Variables:**
 
-Go es un lenguaje de tipado estático, lo que significa que el tipo de una variable se debe definir en el momento de la declaración o inferirlo.
+  Go es un lenguaje de tipado estático, lo que significa que el tipo de una variable se debe definir en el momento de la declaración o inferirlo.
 
-- Declaración explícita:
+  - Declaración explícita:
 
-```go
-var x int = 10
-var name string = "KevinDev"
+  ```go
+  var x int = 10
+  var name string = "KevinDev"
 
-```
+  ```
 
-- Declaración implícita (inferencia de tipo):
+  - Declaración implícita (inferencia de tipo):
 
-```go
-y := 20      // int
-name2 := "GoLang"  // string
+  ```go
+  y := 20      // int
+  name2 := "GoLang"  // string
 
-```
+  ```
 
-**2.2. Tipos de Datos Básicos:**
+- **Tipos de Datos Básicos:**
 
-- int: Enteros (tamaño depende de la arquitectura del sistema, 8, 16, 32 o 64 bits).
-- float32, float64: Números con punto flotante de simple y doble precisión.
-- string: Cadenas de texto.
-- bool: Valores booleanos (true, false).
-- rune: Caracteres Unicode (alias de int32).
-- Arreglos, slices, structs.
+  - int: Enteros (tamaño depende de la arquitectura del sistema, 8, 16, 32 o 64 bits).
+  - float32, float64: Números con punto flotante de simple y doble precisión.
+  - string: Cadenas de texto.
+  - bool: Valores booleanos (true, false).
+  - rune: Caracteres Unicode (alias de int32).
+  - Arreglos, slices, structs.
 
-```go
-var num int = 42
-var decimal float64 = 3.14
-var flag bool = true
-var character rune = 'A'
+  ```go
+  var num int = 42
+  var decimal float64 = 3.14
+  var flag bool = true
+  var character rune = 'A'
 
-```
+  ```
 
-**2.3. Mutabilidad:**
+- **Mutabilidad:**
 
-Las variables declaradas con var o := son mutables, lo que significa que su valor puede cambiar.
+  Las variables declaradas con var o := son mutables, lo que significa que su valor puede cambiar.
 
-```go
-var x int = 5
-x = 10 // Mutabilidad
+  ```go
+  var x int = 5
+  x = 10 // Mutabilidad
 
-```
+  ```
 
 ---
 
-## 3. Ámbito de las Variables
+## 1.3. Ámbito de las Variables
 
 El ámbito o alcance de una variable define su visibilidad y duración dentro del programa.
 
-**3.1. Alcance Global:**
+- **Alcance Global:**
 
-Las variables declaradas fuera de cualquier función tienen alcance global y pueden ser accedidas desde cualquier parte del paquete.
+  Las variables declaradas fuera de cualquier función tienen alcance global y pueden ser accedidas desde cualquier parte del paquete.
 
-```go
-var globalVar = "Visible en todo el paquete"
+  ```go
+  var globalVar = "Visible en todo el paquete"
 
-func ejemplo() {
-    fmt.Println(globalVar) // Acceso permitido
-}
+  func ejemplo() {
+      fmt.Println(globalVar) // Acceso permitido
+  }
 
-```
+  ```
 
-**3.1. Alcance Local:**
+- **Alcance Local:**
 
-Las variables declaradas dentro de una función tienen alcance local y solo pueden ser utilizadas dentro de esa función.
+  Las variables declaradas dentro de una función tienen alcance local y solo pueden ser utilizadas dentro de esa función.
 
-```go
-func ejemplo() {
-    var localVar = "Solo visible aquí"
-    fmt.Println(localVar)
-}
-```
+  ```go
+  func ejemplo() {
+      var localVar = "Solo visible aquí"
+      fmt.Println(localVar)
+  }
+  ```
 
-**3.3. Reglas de Visibilidad:**
+- **Reglas de Visibilidad:**
 
-Ámbito del paquete: Variables declaradas con la primera letra mayúscula son exportables y accesibles fuera del paquete.
-Ámbito de función: Variables declaradas dentro de funciones o bloques solo son visibles dentro de ese contexto.
+  - Ámbito del paquete: Variables declaradas con la primera letra mayúscula son exportables y accesibles fuera del paquete.
+  - Ámbito de función: Variables declaradas dentro de funciones o bloques solo son visibles dentro de ese contexto.
 
-**3.4. Contexto de ejecución::**
+- **Contexto de ejecución::**
 
-Go organiza las variables por el contexto en el que se ejecutan. Dependiendo del lugar donde se declaran, pueden ser visibles o no.
+  Go organiza las variables por el contexto en el que se ejecutan. Dependiendo del lugar donde se declaran, pueden ser visibles o no.
 
 ---
 
-## 4. Conversión de Tipos
+## 1.4. Conversión de Tipos
 
 En Go, la conversión de tipos no es implícita, por lo que debe hacerse explícitamente usando la sintaxis de typecasting.
 
-**4.1. Conversión Explícita:**
+- **Conversión Explícita:**
 
-```go
-var entero int = 42
-var decimal float64 = float64(entero) // Conversión explícita de int a float64
-fmt.Println(decimal)
+  ```go
+  var entero int = 42
+  var decimal float64 = float64(entero) // Conversión explícita de int a float64
+  fmt.Println(decimal)
 
-```
+  ```
 
-**4.2. Conversión Implícita:**
+- **Conversión Implícita:**
 
-Go no admite conversiones implícitas entre tipos. Si intentas sumar un entero y un flotante sin convertir explícitamente uno de ellos, obtendrás un error.
+  Go no admite conversiones implícitas entre tipos. Si intentas sumar un entero y un flotante sin convertir explícitamente uno de ellos, obtendrás un error.
 
-```go
-var x int = 5
-var y float64 = 2.5
-// fmt.Println(x + y) // Error, tipos incompatibles
-fmt.Println(float64(x) + y) // Correcto
+  ```go
+  var x int = 5
+  var y float64 = 2.5
+  // fmt.Println(x + y) // Error, tipos incompatibles
+  fmt.Println(float64(x) + y) // Correcto
 
-```
+  ```
 
 ---
 
-## 5. Constantes
+## 1.5. Constantes
 
 Las constantes en Go se definen con la palabra clave const. A diferencia de las variables, las constantes no pueden cambiar su valor después de ser declaradas.
 
@@ -181,40 +181,40 @@ const Greeting = "Hello, Go"
 
 ```
 
-**5.1. Uso de Constantes:**
+- **Uso de Constantes:**
 
-Las constantes se usan cuando un valor no debe ser modificado durante la ejecución del programa. No se puede utilizar := para definir constantes.
+  Las constantes se usan cuando un valor no debe ser modificado durante la ejecución del programa. No se puede utilizar := para definir constantes.
 
-```go
-const MaxConnections = 100
-const Username = "admin"
+  ```go
+  const MaxConnections = 100
+  const Username = "admin"
 
-```
+  ```
 
-**5.2. Diferencias con las Variables:**
+- **Diferencias con las Variables:**
 
-- Las constantes no permiten reasignación, mientras que las variables pueden cambiar su valor.
-- Las constantes pueden ser usadas en expresiones constantes, donde el valor es conocido en tiempo de compilación.
+  - Las constantes no permiten reasignación, mientras que las variables pueden cambiar su valor.
+  - Las constantes pueden ser usadas en expresiones constantes, donde el valor es conocido en tiempo de compilación.
 
-**5.3. Constantes Especiales: Iota.**
+- **Constantes Especiales: Iota.**
 
-Es ideal para definir secuencias de valores relacionados, como días de la semana, meses del año, estados de un proceso, etc.
+  Es ideal para definir secuencias de valores relacionados, como días de la semana, meses del año, estados de un proceso, etc.
 
-```go
-const (
-    Monday = iota
-    Tuesday
-    Wednesday
-    Thursday
-    Friday
-    Saturday
-    Sunday
-)
-```
+  ```go
+  const (
+      Monday = iota
+      Tuesday
+      Wednesday
+      Thursday
+      Friday
+      Saturday
+      Sunday
+  )
+  ```
 
 ---
 
-## 6. Caracteres de Escape
+## 1.6. Caracteres de Escape
 
 En Go, los caracteres de escape se utilizan dentro de las cadenas para incluir símbolos que de otra forma no se podrían representar directamente o que tienen un significado especial. A continuación se detallan los más importantes:
 
@@ -250,42 +250,43 @@ func main() {
 
 ---
 
-## 7. Argumentos de Línea de Comandos
+## 1.7. Argumentos de Línea de Comandos
 
 En Go, los argumentos de la línea de comandos se pueden acceder mediante el paquete estándar os. Estos argumentos incluyen el nombre del programa y cualquier argumento adicional que se pase al ejecutar el programa desde la terminal.
 
-**7.1. Acceso a los Argumentos:**
+- **Acceso a los Argumentos:**
 
-Los argumentos se encuentran en el slice os.Args, donde el primer elemento (os.Args[0]) es siempre el nombre del programa, y los elementos siguientes son los argumentos que se pasaron al programa.
+  Los argumentos se encuentran en el slice os.Args, donde el primer elemento (os.Args[0]) es siempre el nombre del programa, y los elementos siguientes son los argumentos que se pasaron al programa.
 
-```go
-package main
+  ```go
+  package main
 
-import (
-    "fmt"
-    "os"
-)
+  import (
+      "fmt"
+      "os"
+  )
 
-func main() {
-    // Imprimir todos los argumentos de la línea de comandos
-    fmt.Println(os.Args)
+  func main() {
+      // Imprimir todos los argumentos de la línea de comandos
+      fmt.Println(os.Args)
 
-    // Acceder al primer argumento pasado (si existe)
-    if len(os.Args) > 1 {
-        fmt.Println("Argumento 1:", os.Args[1])
-    } else {
-        fmt.Println("No se pasaron argumentos.")
-    }
-}
+      // Acceder al primer argumento pasado (si existe)
+      if len(os.Args) > 1 {
+          fmt.Println("Argumento 1:", os.Args[1])
+      } else {
+          fmt.Println("No se pasaron argumentos.")
+      }
+  }
 
-```
+  ```
 
-**7.2. Ejecución con Argumentos:**
+- **Ejecución con Argumentos:**
 
-Si ejecutas el programa anterior desde la terminal con el siguiente comando:
+  Si ejecutas el programa anterior desde la terminal con el siguiente comando:
 
 ```bash
 go run main.go argumento1 argumento2
+
 ```
 
 La salida será:
@@ -293,15 +294,16 @@ La salida será:
 ```csharp
 [main.go argumento1 argumento2]
 Argumento 1: argumento1
+
 ```
 
 ---
 
-## 8. Comandos Básicos Go
+## 1.8. Comandos Básicos Go
 
 - go run: Compila y ejecuta el programa.
 - go build: Compila el código fuente y genera un binario.
-  -./miPrograma: Ejecuta el binario generado por go build.
+- ./miPrograma: Ejecuta el binario generado por go build.
 - go install: Compila y guarda el binario en el directorio de instalación de Go.
 - go fmt: Formatea el código según el estilo oficial.
 - go vet: Realiza un análisis estático en busca de errores comunes.
