--- a/Go/Documentación/21.Versiones&Mantenimiento.md
+++ b/Go/Documentación/21.Versiones&Mantenimiento.md
@@ -18,9 +18,9 @@ La semántica de versiones es una convención para versionar software que sigue 
 
 - Ejemplo de Versionado:
 
-v1.0.0: Primera versión estable.
-v1.1.0: Añadir una nueva funcionalidad manteniendo compatibilidad.
-v1.1.1: Corregir un error menor sin cambiar las funcionalidades.
+  - v1.0.0: Primera versión estable.
+  - v1.1.0: Añadir una nueva funcionalidad manteniendo compatibilidad.
+  - v1.1.1: Corregir un error menor sin cambiar las funcionalidades.
 
 - **Herramientas en Go para Versionado:**\
 
